# DASim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  README.md
benchmark/benchmarks/: benchmark_shm_bp.sh  benchmark_shm_hp.sh  benchmark_shm_real_world_02.sh  benchmark_shm_real_world_04.sh  benchmark_shm_real_world_16.sh  benchmark_shm_real_world_64.sh  benchmark_shm_real_world_po.sh  benchmark_xpmem_bp_orig.sh  benchmark_xpmem_hp_master.sh  benchmark_xpmem_hp_orig.sh  benchmark_xpmem_hp_remap512.sh  benchmark_xpmem_real_world_02.sh  benchmark_xpmem_real_world_04.sh  benchmark_xpmem_real_world_16.sh  benchmark_xpmem_real_world_64.sh  benchmark_xpmem_real_world_po.sh
benchmark/include/: benchmark.h  common.h
benchmark/src/: benchmark.cc  client.cc  common.cc
damanager/: CMakeLists.txt  README.md
damanager/include/damanager/: buffer_manager.h  call_types.h  client.h  client_manager.h  demo_buffer_manager.h  util.h
damanager/include/dasim/: log.h
damanager/src/: buffer_manager.cc  client.cc  client_manager.cc  demo_buffer_manager.cc  main.cc  util.cc
damemory/: CMakeLists.txt  README.md
damemory/include/damemory/: damemory.h  types.h
damemory/src/: damemory.cc
demo/: CMakeLists.txt
demo/include/: damemorydemovfs.h  demovfs.h
demo/src/: demo_quicksort.cc  demo_quicksort_inspect.cc  demo_sqlite_insert.cc  demo_sqlite_insert_more.cc  demo_sqlite_select.cc
experiments/: common.h
experiments/dirty_bit_test/: main.c
experiments/madv_remove_pagemap/: main.c
experiments/map_private_shared/: main.c
experiments/maxalloc_test/: main.c
experiments/mlock_madv/: main.c
experiments/mmap_mem_overhead/: main.c
experiments/mmap_shared_file_pfn/: main.c
experiments/page_idle/: main.c
experiments/soft_dirty/: main.c
experiments/uffd_different_process/: common.h  main_cli.c  main_mng.c
experiments/uffd_fork/: main.c
experiments/uffd_mremap/: main.c
experiments/uffd_register_twice/: main.c
experiments/uffd_shm/: main.c
experiments/uffd_sigbus/: main.c
experiments/uffd_soft_dirty_interaction/: main.c
experiments/uffd_wp/: main.c
experiments/xpmem/: common.h  main1.c  main2.c
experiments/xpmem_attach_attach/: main.c
experiments/xpmem_many/: main.c
test/: CMakeLists.txt  test1.cc  test2_1.cc  test2_2.cc  test2_3.cc
xpmem-uffd-mm-test/: CMakeLists.txt  README.md
xpmem-uffd-mm-test/src/: client.c  server.c
xpmem-uffd-pf-test/: CMakeLists.txt
xpmem-uffd-pf-test/include/: test.h
xpmem-uffd-pf-test/src/: client.c  server.c
